--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
         <div class="span9" id="main">
           
 <h1><a name="FsPickler-A-fast-NET-object-serializer" class="anchor" href="#FsPickler-A-fast-NET-object-serializer">FsPickler : A fast .NET object serializer</a></h1>
-<p>FsPickler is a serialization library that facilitates the distribution of .NET objects.
-The implementation focuses on performance and completeness in supported types, including F# types.
-It supports multiple, pluggable serialization formats including Binary, Xml, JSON and BSON.
+<p>FsPickler is a serialization library that facilitates the distribution of objects across .NET processes.
+The implementation focuses on performance and supporting as many types as possible, where possible.
+It supports multiple, pluggable serialization formats such as XML, JSON and BSON;
+also included is a fast binary format of its own.
 The library is based on the functional programming concept of
 <a href="http://lambda-the-ultimate.org/node/2243">pickler combinators</a>
-which has been adapted to accommodate the object oriented nature of the .NET framework.</p>
+which has been adapted to accommodate the .NET type system.</p>
 <div class="row">
   <div class="span1"></div>
   <div class="span6">
@@ -76,10 +77,10 @@ PM> Install-Package FsPickler.CSharp</pre>
 <p>The principal motivation behind creating FsPickler is the need for a
 library that provides efficient, correct and complete serialization of
 objects in the CLR and mono runtime. It is aimed at providing a foundation for
-large-scale distributed computation that is based on the .NET framework.</p>
+efficient communication across homogeneous .NET clusters.</p>
 <p>FsPickler is ideally suited for serializing:</p>
 <ul>
-<li>Large and complex objects, such as dictionaries, trees and cyclic objects.</li>
+<li>Large and complex object graphs, such as dictionaries, trees and cyclic graphs.</li>
 <li>Abstract classes, subtypes, nulls, delegates and closures.</li>
 <li>ISerializable, DataContract or attribute-based serialization.</li>
 <li>F# unions, records and quotations.</li>
@@ -87,7 +88,7 @@ large-scale distributed computation that is based on the .NET framework.</p>
 </ul>
 <p>FsPickler is NOT:</p>
 <ul>
-<li>a general-purpose Xml/JSON/BSON framework.</li>
+<li>a general-purpose XML/JSON/BSON framework.</li>
 <li>a library designed for cross-platform communication.</li>
 <li>a library designed with version tolerance in mind. Avoid using for long-term persistence.</li>
 </ul>
