Update generated documentation for version 2.4.0

--- a/tutorial.html
+++ b/tutorial.html
@@ -757,7 +757,7 @@ when serializing classes:</p>
 </tr>
 </table>
 <p>This essentially disables the serialization of any object whose declaring type
-is specified on the serialization format. Attempting to serialize or deserialize
+is specified on the serialization itself. Attempting to serialize or deserialize
 any such object will result in a serialization exception.</p>
 <p>Note that enabling this option prevents serialization of the following types:</p>
 <ul>
