--- a/tutorial.html
+++ b/tutorial.html
@@ -758,10 +758,10 @@ when serializing classes:</p>
 </table>
 <p>This essentially disables the serialization of any object whose declaring type
 is specified on the serialization itself. Attempting to serialize or deserialize
-any such object will result in a serialization exception.</p>
+any such object will result in an exception.</p>
 <p>Note that enabling this option prevents serialization of the following types:</p>
 <ul>
-<li><code>System.Object</code> or any non-sealed class.</li>
+<li><code>System.Object</code> or any abstract class (excluding F# DUs).</li>
 <li>Any delegate instance or F# function.</li>
 <li>Any ISerializable class.</li>
 </ul>
