Update generated documentation for version 2.4.0

--- a/tutorial.html
+++ b/tutorial.html
@@ -763,7 +763,7 @@ any such object will result in an exception.</p>
 <ul>
 <li><code>System.Object</code> or any abstract class (excluding F# DUs).</li>
 <li>Any delegate instance or F# function.</li>
-<li>Any ISerializable class.</li>
+<li>Any <code>ISerializable</code> class.</li>
 </ul>
 <p>As a further precaution, it is also possible to disable implicit assembly loading
 when deserializing objects:</p>
