--- a/tutorial.html
+++ b/tutorial.html
@@ -24,8 +24,8 @@
     <div class="container">
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li><a href="http://nessos.github.io/">nessos</a></li>
-          <li><a href="http://github.com/nessos/FsPickler">github page</a></li>
+          <li><a href="http://mbrace.io/">mbrace</a></li>
+          <li><a href="http://github.com/mbraceproject/FsPickler">github page</a></li>
         </ul>
         <h3 class="muted"><a href="/FsPickler/index.html">FsPickler</a></h3>
       </div>
@@ -55,7 +55,7 @@ that can be initialized as follows:</p>
 </tr>
 </table>
 <p>Json serialization formats can be accessed by referencing the <code>FsPickler.Json</code> project.
-If evaluating from F# interactive, make sure to <a href="https://github.com/nessos/FsPickler/issues/16">add an explicit reference to Json.Net</a>.</p>
+If evaluating from F# interactive, make sure to <a href="https://github.com/mbraceproject/FsPickler/issues/16">add an explicit reference to Json.Net</a>.</p>
 <table class="pre"><tr><td class="lines"><pre class="fssnip"><span class="l">1: </span>
 <span class="l">2: </span>
 <span class="l">3: </span>
@@ -1034,17 +1034,17 @@ when deserializing objects:</p>
 
         </div>
         <div class="span3">
-          <a target="_blank" href="http://www.nessos.gr/">
-      <img src="/FsPickler/img/nessos.png" alt="F# Project" style="width:150px;margin:10px" /> 
+          <a target="_blank" href="http://mbrace.io/">
+      <img src="/FsPickler/img/mbrace.png" alt="F# Project" style="width:150px;margin:10px" /> 
       </a>
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">FsPickler</li>
             <li><a href="/FsPickler/index.html">Home page</a></li>
             <li class="divider"></li>
             <li><a href="http://www.nuget.org/packages/FsPickler">Get Library via NuGet</a></li>
-            <li><a href="http://github.com/nessos/FsPickler">Source Code on GitHub</a></li>
-            <li><a href="http://github.com/nessos/FsPickler/blob/master/License.md">License</a></li>
-            <li><a href="http://github.com/nessos/FsPickler/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
+            <li><a href="http://github.com/mbraceproject/FsPickler">Source Code on GitHub</a></li>
+            <li><a href="http://github.com/mbraceproject/FsPickler/blob/master/License.md">License</a></li>
+            <li><a href="http://github.com/mbraceproject/FsPickler/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
 
             <li class="nav-header">Documentation</li>
             <li><a href="/FsPickler/tutorial.html">Tutorial</a></li>
@@ -1055,6 +1055,6 @@ when deserializing objects:</p>
         </div>
       </div>
     </div>
-    <a href="http://github.com/nessos/FsPickler"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"/></a>
+    <a href="http://github.com/mbraceproject/FsPickler"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"/></a>
   </body>
   </html>
