--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@ which has been adapted to accommodate the .NET type system.</p>
     <div class="well well-small" id="nuget">
       The FsPickler library can be <a href="https://nuget.org/packages/FsPickler">installed from NuGet</a>:
       <pre>PM> Install-Package FsPickler
-PM> Install-Package FsPickler.Json
-PM> Install-Package FsPickler.CSharp</pre>
+PM> Install-Package FsPickler.Json</pre>
     </div>
   </div>
   <div class="span1"></div>
