Update generated documentation for version 5.2

--- a/benchmarks.html
+++ b/benchmarks.html
@@ -34,6 +34,7 @@
         <div class="span9" id="main">
           
 <h1><a name="Performance" class="anchor" href="#Performance">Performance</a></h1>
+<p>THIS PAGE IS OUTDATED:- please see the updated benchmarks page <a href="https://github.com/mbraceproject/FsPickler/wiki/.NET-Core-Benchmarks">here</a>.</p>
 <p>How does FsPickler compare against other .Net serialization libraries in terms of performance?
 In this section we present a few microbenchmarks: we compared FsPickler against
 <a href="http://msdn.microsoft.com/en-us/library/system.runtime.serialization.formatters.binary.binaryformatter.aspx">BinaryFormatter</a>,
