--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@ efficient communication across homogeneous .NET clusters.</p>
 <li><p><a href="tutorial.html">Tutorial</a> A short introduction to FsPickler.</p></li>
 <li><p><a href="overview.html">Technical Overview</a> A walkthrough of the library's implementation details.</p></li>
 <li>
-<p><a href="benchmarks.html">Performance</a> Benchmarks comparing FsPickler
-to other established serialization libraries.</p>
+<p>~<a href="benchmarks.html">Performance</a> Benchmarks comparing FsPickler
+to other established serialization libraries~. THIS PAGE IS OUTDATED.</p>
 </li>
+<li><p><a href="https://github.com/mbraceproject/FsPickler/wiki/.NET-Core-Benchmarks">.NET Core Benchmarks</a></p></li>
 <li>
 <p><a href="reference/index.html">API Reference</a> contains automatically generated documentation for all types, modules
 and functions in the library.</p>
