--- a/overview.html
+++ b/overview.html
@@ -537,7 +537,7 @@ pickler combinators in a strongly typed manner:</p>
             <li class="nav-header">Documentation</li>
             <li><a href="/FsPickler/tutorial.html">Tutorial</a></li>
             <li><a href="/FsPickler/overview.html">Technical Overview</a></li>
-            <li><a href="/FsPickler/benchmarks.html">Performance</a></li>
+            <li><a href="https://github.com/mbraceproject/FsPickler/wiki/.NET-Core-Benchmarks">Performance</a></li>
             <li><a href="/FsPickler/reference/index.html">API Reference</a></li>
           </ul>
         </div>
