Update generated documentation for version 5.3.0

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       <hr />
       <div class="row">
         <div class="span9" id="main">
-          
-<h1><a name="FsPickler-A-fast-multi-format-messaging-serializer-for-NET" class="anchor" href="#FsPickler-A-fast-multi-format-messaging-serializer-for-NET">FsPickler : A fast, multi-format messaging serializer for .NET</a></h1>
+          <h1><a name="FsPickler-A-fast-multi-format-messaging-serializer-for-NET" class="anchor" href="#FsPickler-A-fast-multi-format-messaging-serializer-for-NET">FsPickler : A fast, multi-format messaging serializer for .NET</a></h1>
 <p>FsPickler is a serialization library that facilitates the distribution of objects across .NET processes.
 The implementation focuses on performance and supporting as many types as possible, where possible.
 It supports multiple, pluggable serialization formats such as XML, JSON and BSON;
@@ -109,7 +108,7 @@ and functions in the library.</p>
 <h2><a name="Who-uses-FsPickler" class="anchor" href="#Who-uses-FsPickler">Who uses FsPickler?</a></h2>
 <ul>
 <li>
-<p><a href="http://m-brace.net/">MBrace framework</a> - MBrace is a framework for distributed
+<p><a href="http://mbrace.io/">MBrace framework</a> - MBrace is a framework for distributed
 computation in the cloud. Its programming model uses continuations, so a library
 that supports serialization of closures was essential. FsPickler was designed out
 of this requirement.</p>
